@@ -39,13 +39,6 @@ Sets the directory where the pid file will be created.
 
   my $service = service 'thing', in '/var/run';
 
-=head2 poll
-
-Optional; controls the sleep time between polls when L</zap>ping a process
-with a blocking wait/timeout.
-
-  my $service = service 'thing', in '/var/run', poll 0.5;
-
 =head2 run
 
 Starts the service loop, calling the supplied code block until it either
@@ -60,7 +53,7 @@ via L</zap>).
 
 =head2 stop
 
-Tells the L</poll> loop to shut down.
+Tells the L</run> loop to shut down.
 
   run {
     my $task = get_next_task() or stop $service;
